# dining-philosophers

./: dining-philosophers.cabal
src/: Main.hs
