name:                dining-philosophers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mtesseract/dining-philosophers#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Schulte
maintainer:          moritz.schulte@zalando.de
copyright:           (c) 2016 Zalando SE
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dining-philosophers
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -rtsopts
  build-depends:       base >= 4.7 && < 5
                     , stm
                     , say
                     , classy-prelude
                     , async
                     , random